feat: 用户分配角色接口修改
