# docs/swagger.yaml
@@ -65,10 +65,12 @@ definitions:
     type: object
   controller.RoleRequest:
     properties:
-      role_id:
-        type: integer
+      role_ids:
+        items:
+          type: integer
+        type: array
     required:
-    - role_id
+    - role_ids
     type: object
   crud.MenuResponse:
     properties:
@@ -725,34 +727,6 @@ paths:
       tags:
       - Role
   /user/{id}/role:
-    delete:
-      consumes:
-      - application/json
-      description: 从指定用户移除角色
-      parameters:
-      - description: 用户ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 角色信息
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/controller.RoleRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 移除成功
-          schema:
-            $ref: '#/definitions/controller.Response-any'
-      security:
-      - BearerAuth: []
-      summary: 移除用户的角色
-      tags:
-      - User
     post:
       consumes:
       - application/json
